# ghos

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  Anchor.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  _commit_history.py  justfile  package.json  rust-toolchain.toml  tsconfig.json
.devcontainer/: devcontainer.json  postCreate.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  devnet.yml  release.yml
cli/: .gitignore  README.md  pyproject.toml
cli/ghos_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  constants.py  display.py  errors.py  pdas.py  units.py
cli/ghos_cli/commands/: __init__.py  apply.py  audit.py  burn.py  config_cmd.py  init.py  mix.py  send.py  shield.py  status.py  withdraw.py
cli/ghos_cli/crypto/: __init__.py  commit.py  elgamal.py  keys.py
cli/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_crypto.py  test_pdas.py  test_units.py
docs/: api-reference.md  architecture.md  burner-accounts.md  coinjoin.md  confidential-transfer.md  deployment.md  faq.md  integration.md  threat-model.md  zk-stack.md
examples/: README.md  auditor_setup.ts  batch_airdrop.ts  burner_wallet_flow.ts  mix_coinjoin.ts  shield_and_transfer.ts  watcher_bot.ts
migrations/: deploy.ts  seed_auditors.ts
programs/ghos/: Cargo.toml
programs/ghos/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/ghos/src/instructions/: apply_pending.rs  auditor_register.rs  auditor_rotate.rs  confidential_transfer.rs  config_update.rs  create_burner.rs  destroy_burner.rs  initialize.rs  mix_commit.rs  mix_init.rs  mix_reveal.rs  mix_settle.rs  mod.rs  shield.rs  withdraw.rs
programs/ghos/src/utils/: mod.rs  token22.rs  validation.rs  zk.rs
scripts/: build.sh  check_compat.ts  devnet_seed.ts  export_idl.ts  generate_banner.py
sdk/: .npmignore  README.md  jest.config.js  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  errors.ts  index.ts  pdas.ts  types.ts  utils.ts  watcher.ts
sdk/src/__tests__/: client.test.ts  crypto.test.ts  instructions.test.ts  pdas.test.ts  utils.test.ts
sdk/src/crypto/: bulletproof.ts  elgamal.ts  hash.ts  keys.ts  sigma.ts
sdk/src/idl/: ghos.json
sdk/src/instructions/: apply.ts  auditor.ts  burner.ts  config.ts  initialize.ts  mix.ts  shield.ts  transfer.ts  withdraw.ts
tests/: auditor.test.ts  burner.test.ts  confidential_transfer.test.ts  devnet.test.ts  ghos.test.ts  mix.test.ts  tsconfig.json
tests/fixtures/: accounts.ts  mints.ts  proofs.ts
