[workspace]
members = ["programs/ghos"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["ghos.xyz core"]
license = "MIT"
repository = "https://github.com/ghosxyz/ghos"
homepage = "https://ghos.xyz"
readme = "README.md"
rust-version = "1.78"
description = "Solana privacy OS built on Token-2022 Confidential Balances"
keywords = ["solana", "anchor", "privacy", "token-2022", "confidential"]
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022", "token_2022_extensions"] }
solana-program = "=1.18.26"
spl-token-2022 = { version = "3.0.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
solana-zk-token-sdk = "=1.18.26"
bytemuck = { version = "1.16", features = ["derive"] }
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
arrayref = "0.3"
num-derive = "0.4"
num-traits = "0.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# deps: bump anchor-lang from 0.29.0 to 0.30.1

# deps: pin solana-program to =1.18.26
