[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghos-cli"
version = "0.4.1"
description = "Terminal client for the ghos Solana privacy OS, built on Token-2022 confidential balances."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ghos contributors", email = "contact@ghos.xyz" },
]
maintainers = [
    { name = "ghos contributors", email = "contact@ghos.xyz" },
]
keywords = [
    "solana",
    "token-2022",
    "confidential-transfer",
    "privacy",
    "elgamal",
    "zk",
    "coinjoin",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "solana>=0.34",
    "solders>=0.21",
    "anchorpy>=0.20",
    "pynacl>=1.5",
    "tomli>=2; python_version < '3.11'",
    "tomli_w>=1.0",
    "blake3>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://ghos.xyz"
Documentation = "https://ghos.xyz/docs/"
Repository = "https://github.com/ghosxyz/ghos"
Issues = "https://github.com/ghosxyz/ghos/issues"
Changelog = "https://github.com/ghosxyz/ghos/blob/main/CHANGELOG.md"

[project.scripts]
ghos = "ghos_cli.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghos_cli*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
ghos_cli = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "C4", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

# chore: bump CLI version to 0.4.1
