[package]
name = "ghos"
description = "Solana privacy OS program, Token-2022 confidential transfer wrapper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "ghos"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-zk-token-sdk = { workspace = true }
bytemuck = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
arrayref = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
